fix align-items

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -32,7 +32,7 @@
   &__rating {
     display: flex;
     justify-content: space-between;
-    align-items: flex-center;
+    align-items: flex-end;
     margin-top: 16px;
   }
 
